# Transformers

./: .gitignore  .gitmodules  LICENSE  README.md  environment.yml  requirements.txt  train_sentiment.py
.claude/: settings.local.json
app/: __init__.py  train_decoder.py  train_encoder.py  train_sentiment.py  train_transformers.py
configs/: .gitkeep  __init__.py  app.json  base.py  config.py  dataset.json  foundation.py  imdb.py  tinystories.py  training.json  transformers.py
data/: __init__.py  imdb.py  neuscene.py  tinystory.py
data/processed/: .gitkeep
data/raw/: .gitkeep
deploy/: README.md  onnx_export.py
deploy/triton/: run_triton_jetson.sh
docs/: transformer-core-migration.md
experiments/: .gitkeep  training_history.json
inference/: pytorch_checkpoint_exporter.py
inference/cpp/: CMakeLists.txt  activations.cpp  activations.hpp  layers.cpp  layers.hpp  load_params.cpp  model.hpp  tinystories.cpp  utils.hpp
inference/cpp/src/model/: activations.cpp  activations.hpp  compile.hpp  encoder.hpp  executer.cpp  executer.hpp  layers.cpp  layers.hpp  utils.hpp
inference/python/: infer_tinystories.py
logs/: .gitkeep
models/: __init__.py  classifier.py  foundation.py  training.py  transformers.py  utils.py
models/core/: __init__.py  embeddings.py  layers.py
notebooks/: .gitkeep
scene_data/: __init__.py
scripts/: .gitkeep  compute_neuscenes_stats.py  setup_local_env.sh  train_foundation.py  train_sentiment.py  train_transformers.py
src/: __init__.py
src/core/: __init__.py  training.py
src/datasets/: __init__.py  neuscenes.py
src/models/: __init__.py  foundation.py
src/models/core/: __init__.py  embeddings.py  layers.py
src/training/: __init__.py
tests/: __init__.py
tool/: utils.py
tool/deploy/: build_trt_engine.sh  infer_onnx_ort_trt.py  infer_trt_engine.py  onnx_export.py
tool/deploy/triton/: run_triton_jetson.sh
tool/deploy/triton/model_repository/bert_sst2/: config.pbtxt
training/: __init__.py  trainer_utils.py  training.py
val/: __init__.py  validate.py
validation/: evaluate_checkpoint.py  metrics.json
viz/: __init__.py  checkpoint_visualizer.py  plots.py
